<resources>
    <string name="app_name">HND task2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="IntroCorreo">Introduce Correo</string>
    <string name="IntroUsuario">Introduce Usuario</string>
    <string name="IntroContra">Introduce Contraseña</string>
    <string name="registro">Registrarse</string>
    <string name="Entrar">Entrar</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="perfil">perfil</string>
    <string name="personajes">personajes</string>
    <string name="descripcion">descripcion del juego</string>
    <string name="objetosmapa">objetos del mapa</string>
    <string name="tipssobreeljuego">tips del juego</string>
    <string name="ajustes">ajustes</string>
    <string name="login">Login</string>
    <string name="apellidos">Introduce Apellidos</string>
    <string name="nombre">Introduce Nombre</string>
    <string name="version">Version: 1.0</string>
    <string name="contacto">Contacto: pere@contacto.es</string>
    <string name="infor">Informacion: Juego Naves</string>
    <string name="descrip">Descripcion: Juego de naves con diferentes niveles y mapas y mas sorpresas</string>
    <string name="salir">Salir</string>
    <string name="comp">Compartir</string>
</resources>
